# AVEL

./: CMakeLists.txt  README.md  run_avel_benchmarks.py  run_avel_tests.py
.github/workflows/: main.yml
benchmark_results/: i7-1065G7 g++-12.md
benchmarks/: AVEL_benchmarks.cpp  AVEL_benchmarks.hpp  Average_16i.hpp  Average_16u.hpp  Average_32i.hpp  Average_32u.hpp  Average_64i.hpp  Average_64u.hpp  Average_8i.hpp  Average_8u.hpp  Bit_ceil_16u.hpp  Bit_ceil_32u.hpp  Bit_ceil_64u.hpp  Bit_ceil_8u.hpp  Bit_floor_16u.hpp  Bit_floor_32u.hpp  Bit_floor_64u.hpp  Bit_floor_8u.hpp  Bit_width_16u.hpp  Bit_width_32u.hpp  Bit_width_64u.hpp  Bit_width_8u.hpp  Bitwise_and_16u.hpp  Bitwise_and_32u.hpp  Bitwise_and_64u.hpp  Bitwise_and_8u.hpp  Bitwise_not_16u.hpp  Bitwise_not_32u.hpp  Bitwise_not_64u.hpp  Bitwise_not_8u.hpp  Bitwise_or_16u.hpp  Bitwise_or_32u.hpp  Bitwise_or_64u.hpp  Bitwise_or_8u.hpp  Bitwise_rotl_vector_16u.hpp  Bitwise_rotl_vector_32u.hpp  Bitwise_rotl_vector_64u.hpp  Bitwise_rotl_vector_8u.hpp  Bitwise_rotr_vector_16u.hpp  Bitwise_rotr_vector_32u.hpp  (+129 more)
docs/: Fixed_point_vectors.md  Floating_point_vectors.md  Integer_vectors.md  Vector_masks.md
include/avel/: Fixed_point.hpp
support/: CMakeLists.txt  chebyshev.py
support/baseline_generator/: Baseline_generator.cpp
support/vector_generator/: float_vector_tests.txt  sint_vector.txt  sint_vector_tests.txt  u_fixed_point.txt  uint_vector.txt  uint_vector_tests.txt
tests/: AVEL_tests.hpp  CMakeLists.txt  Test_utils.hpp
tests/scalars/: Scalar16i_tests.hpp  Scalar16u_tests.hpp  Scalar32f_tests.hpp  Scalar32i_tests.hpp  Scalar32u_tests.hpp  Scalar64f_tests.hpp  Scalar64i_tests.hpp  Scalar64u_tests.hpp  Scalar8i_tests.hpp  Scalar8u_tests.hpp  Scalar_tests.cpp
tests/vectors/: Vec16x16i_tests.hpp  Vec16x16u_tests.hpp  Vec16x32f_tests.hpp  Vec16x32i_tests.hpp  Vec16x32u_tests.hpp  Vec16x8i_tests.hpp  Vec16x8u_tests.hpp  Vec1x16i_tests.hpp  Vec1x16u_tests.hpp  Vec1x32f_tests.hpp  Vec1x32i_tests.hpp  Vec1x32u_tests.hpp  Vec1x64f_tests.hpp  Vec1x64i_tests.hpp  Vec1x64u_tests.hpp  Vec1x8i_tests.hpp  Vec1x8u_tests.hpp  Vec2x64f_tests.hpp  Vec2x64i_tests.hpp  Vec2x64u_tests.hpp  Vec32x16i_tests.hpp  Vec32x16u_tests.hpp  Vec32x8i_tests.hpp  Vec32x8u_tests.hpp  Vec4x32f_tests.hpp  Vec4x32i_tests.hpp  Vec4x32u_tests.hpp  Vec4x64f_tests.hpp  Vec4x64i_tests.hpp  Vec4x64u_tests.hpp  Vec64x8i_tests.hpp  Vec64x8u_tests.hpp  Vec8x16i_tests.hpp  Vec8x16u_tests.hpp  Vec8x32f_tests.hpp  Vec8x32i_tests.hpp  Vec8x32u_tests.hpp  Vec8x64f_tests.hpp  (+2 more)
(+68 files in other folders)
